tests/ui/compile-fail/init/no_tuple_shorthand.stderr
error: expected `<-` or `:`
 --> tests/ui/compile-fail/init/no_tuple_shorthand.rs:7:32
  |
7 |     let _ = pin_init!(Tuple { 0, 1: 24 });
  |                                ^
